Apply attachment 47642 by Egbert Voigt :

> I have attached a simple solution, where instead of the package name
> the whole path will be used in the text field. I.e., when you touch the
> Apply of OK button the hierarchy is not more destroyed.

BUG: 174184

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1279523